201605281702. todo: KinectInstance->FrameReader->FramePainter

--- a/KinectToolkits/KinectToolkits.vcxproj.filters
+++ b/KinectToolkits/KinectToolkits.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClInclude Include="DepthFramePainter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="KinectInstance.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +84,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DepthFramePainter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="KinectInstance.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FrameReader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
