--- a/KinectToolkits/KinectToolkits.vcxproj
+++ b/KinectToolkits/KinectToolkits.vcxproj
@@ -153,6 +153,8 @@
     <ClInclude Include="ColorFramePainter.h" />
     <ClInclude Include="DepthFramePainter.h" />
     <ClInclude Include="FramePainter.h" />
+    <ClInclude Include="FrameReader.h" />
+    <ClInclude Include="KinectInstance.h" />
     <ClInclude Include="SkeletalJoint.h" />
     <ClInclude Include="Skeleton.h" />
     <ClInclude Include="stdafx.h" />
@@ -164,7 +166,10 @@
     <ClCompile Include="ColorFramePainter.cpp" />
     <ClCompile Include="DepthFramePainter.cpp" />
     <ClCompile Include="FramePainter.cpp" />
+    <ClCompile Include="FrameReader.cpp" />
+    <ClCompile Include="KinectInstance.cpp" />
     <ClCompile Include="KinectToolkits.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="SkeletalJoint.cpp" />
     <ClCompile Include="Skeleton.cpp" />
     <ClCompile Include="stdafx.cpp">
