--- a/KinectToolkits/KinectToolkits.vcxproj.filters
+++ b/KinectToolkits/KinectToolkits.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClCompile Include="BodyIndexFramePainter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Util.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
